@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods

class Entry {
    task
    urgency
    green space
}

class ToDoList {
    task description
}

class GSM {
}

class Managers {
    name
    email
    position
    phone
}

Managers "1" -- "1" GSM : have >
Managers "1" -- "1..*" ToDoList: manages
ToDoList "1" -- "1" Entry : has >

@enduml


